cheeky viewbook fixes inb, box shadow seperated into 3 components for .container div, header-nav-wrap has dropped relative positioning

--- a/src/scss/page/_general.scss
+++ b/src/scss/page/_general.scss
@@ -8,7 +8,7 @@ body {
     padding-top: 20px;
     padding-bottom: 20px;
     z-index: 100;
-    box-shadow: 0 0 20px -4px rgba(0, 0, 0, 0.75);
+    box-shadow: 9px 0px 10px -10px rgba(0, 0, 0, .75), -9px 0px 10px -10px rgba(0, 0, 0, .75), 0px 9px 10px -10px rgba(0, 0, 0, .75);
 }
 
 .person-profile .details img {
